Many code improvements, clean ups and bugfixes. Improvements with SpotBugs. Improvements in the Gradle script. Separating checkstyle main and test configs. Avoiding some setAccessible(true) calls.